--- a/src/main/resources/templates/layouts/Master/country.html
+++ b/src/main/resources/templates/layouts/Master/country.html
@@ -12,9 +12,21 @@
 	<link rel="stylesheet" href="../../css/AdminLTE.min.css" th:href="@{/css/AdminLTE.min.css}">
 	<link rel="stylesheet" href="../../css/skins/_all-skins.min.css" th:href="@{/css/skins/_all-skins.min.css}">
 
-<link href="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.2.0/sweetalert2.min.css"
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.2.0/sweetalert2.min.css"
 		rel="stylesheet" />
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.2.0/sweetalert2.min.js"></script>
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+
+	<script src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/jquery.validate.min.js"></script>
+
+
+	<style>
+		.error {
+			color: red;
+			font-size: 11px;
+		}
+	</style>
 
 
 </head>
@@ -61,13 +73,13 @@
 									<div class="col-md-8 shadow bg-white rounded" style="margin-top: 20px;">
 										<!-- general form elements -->
 										<div class="box box-primary">
-										
+
 											<input type="hidden" id="mess" name="mess" th:value="${message}">
 											<div class="box-header with-border">
 												<!--<h3 class="box-title">Category Master</h3>-->
 											</div><!-- /.box-header -->
 											<!-- form start -->
-											<form role="form" th:action="@{/country/}" method="POST"
+											<form id="countryForm" role="form" th:action="@{/country/}" method="POST"
 												th:object="${country}">
 												<div class="box-body">
 
@@ -77,31 +89,20 @@
 															th:field="*{countryCode}">
 													</div>
 													<div class="form-group col-md-6">
-														<label for="inputPassword4">Country Name</label> <input
-															type="text" class="form-control" placeholder="country name"
-															th:field="*{countryName}">
+														<label for="inputPassword4">Country Name</label><span style="color: red">*</span> <input
+															type="text" class="form-control" placeholder="Country Name"
+															th:field="*{countryName}" title="This field is required"
+															required>
 													</div>
 
 
 
 
-													<div class="form-group" style="margin:10px;">
-
-														<div class="form-check form-check-inline">
-															<input class="form-check-input" type="radio"
-																name="inlineRadioOptions" id="inlineRadio1" value="Y">
-															<label class="form-check-label" for="inlineRadio1"
-																th:field="*{activeYn}">Active</label>
-														</div>
-
-														<div class="form-check form-check-inline">
-															<input class="form-check-input" type="radio"
-																name="inlineRadioOptions" id="inlineRadio1" value="N">
-															<label class="form-check-label" for="inlineRadio1"
-																th:field="*{activeYn}">In-Active</label>
-														</div>
-
-													</div>
+													<label class="checkbox-inline">
+														<input type="radio" value="Y" name="inlineRadioOptions">Active
+														<input type="radio" value="N"
+															name="inlineRadioOptions">In-Active
+													</label>
 												</div><!-- /.box-body -->
 
 												<div class="box-footer" style="margin: 10px">
@@ -132,9 +133,9 @@
 			</div>
 
 			<div th:replace="fragments/footer :: footer">...</div>
-			
-			
-			
+
+
+
 			<script>
 
 				$(document).ready(function () {
@@ -154,10 +155,18 @@
 				});
 			</script>
 
+			<script>
+
+				$("#countryForm").validate({
+					ignoreTitle: true
+				});
+
+			</script>
+
 			<!--   <section class="content">
         
         </section>-->
-			<script src="../../js/jQuery-2.1.4.min.js" th:src="@{/js/jQuery-2.1.4.min.js}"></script>
+			<!--<script src="../../js/jQuery-2.1.4.min.js" th:src="@{/js/jQuery-2.1.4.min.js}"></script>-->
 			<script src="../../js/bootstrap.min.js" th:src="@{/js/bootstrap.min.js}"></script>
 			<script src="../../js/fastclick.min.js" th:src="@{/js/fastclick.min.js}"></script>
 			<script src="../../js/app.min.js" th:src="@{/js/app.min.js}"></script>
