--- a/src/main/resources/templates/layouts/Master/designation.html
+++ b/src/main/resources/templates/layouts/Master/designation.html
@@ -19,6 +19,20 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.2.0/sweetalert2.min.js"></script>
 
 
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+
+	<script src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/jquery.validate.min.js"></script>
+
+
+	<style>
+		.error {
+			color: red;
+			font-size: 11px;
+		}
+	</style>
+	
+	
+
 </head>
 
 <body class="hold-transition skin-blue sidebar-mini">
@@ -69,7 +83,7 @@
 												<!--<h3 class="box-title">Category Master</h3>-->
 											</div><!-- /.box-header -->
 											<!-- form start -->
-											<form role="form" th:action="@{/designation/}" method="POST"
+											<form id="designationForm" role="form" th:action="@{/designation/}" method="POST"
 												th:object="${designation}">
 												<div class="box-body">
 
@@ -79,43 +93,44 @@
 															placeholder="designation code" th:field="*{desigCode}">
 													</div>
 													<div class="form-group col-md-6">
-														<label for="inputPassword4">Designation Name</label> <input
-															type="text" class="form-control"
-															placeholder="designation name" th:field="*{desigName}">
+														<label for="inputPassword4">Designation Name</label><span
+															style="color: red">*</span> <input
+															type="text" class="form-control" title="This field is required"
+															placeholder="Designation Name" th:field="*{desigName}" required>
 													</div>
 
 													<div class="form-group col-md-12">
 														<label for="inputEmail4">Pay Scale Code</label> <input
 															type="text" class="form-control"
-															placeholder="pay scale code" th:field="*{payScaleCode}">
+															placeholder="Pay Scale Code" th:field="*{payScaleCode}">
 													</div>
 													<div class="form-group col-md-6">
 														<label for="inputPassword4">Basic Slab 1</label> <input
 															type="number" class="form-control"
-															placeholder="basic slab 1" th:field="*{basicSlab1}">
+															placeholder="Basic Slab 1" th:field="*{basicSlab1}">
 													</div>
 
 													<div class="form-group col-md-6">
 														<label for="inputEmail4">Basic Slab 2</label> <input
 															type="number" class="form-control"
-															placeholder="basic slab 2" th:field="*{basicSlab2}">
+															placeholder="Basic Slab 2" th:field="*{basicSlab2}">
 													</div>
 
 													<div class="form-group col-md-12">
 														<label for="inputEmail4">Basic Slab 3</label> <input
 															type="number" class="form-control"
-															placeholder="basic slab 3" th:field="*{basicSlab3}">
+															placeholder="Basic Slab 3" th:field="*{basicSlab3}">
 													</div>
 
 													<div class="form-group col-md-6">
 														<label for="inputEmail4">Increment1</label> <input type="number"
-															class="form-control" placeholder="increement 1"
+															class="form-control" placeholder="Increement 1"
 															th:field="*{increment1}">
 													</div>
 
 													<div class="form-group col-md-6">
 														<label for="inputEmail4">Increment2</label> <input type="number"
-															class="form-control" placeholder="increement 2"
+															class="form-control" placeholder="Increement 2"
 															th:field="*{increment2}">
 													</div>
 
@@ -167,6 +182,14 @@
 					}
 
 				});
+			</script>
+
+			<script>
+
+				$("#designationForm").validate({
+					ignoreTitle: true
+				});
+
 			</script>
 			<!--   <section class="content">
         
