--- a/src/main/resources/templates/layouts/Master/StoreMaster.html
+++ b/src/main/resources/templates/layouts/Master/StoreMaster.html
@@ -2,27 +2,36 @@
 <html>
 
 <head xmlns:th="http://www.thymeleaf.org">
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>EBS</title>
-	<meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-	<link rel="stylesheet" href="../../css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-	<link rel="stylesheet" href="../../css/AdminLTE.min.css" th:href="@{/css/AdminLTE.min.css}">
-	<link rel="stylesheet" href="../../css/skins/_all-skins.min.css" th:href="@{/css/skins/_all-skins.min.css}">
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<title>EBS</title>
+<meta
+	content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
+	name="viewport">
+<link rel="stylesheet" href="../../css/bootstrap.min.css"
+	th:href="@{/css/bootstrap.min.css}">
+<link rel="stylesheet"
+	href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+<link rel="stylesheet"
+	href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+<link rel="stylesheet" href="../../css/AdminLTE.min.css"
+	th:href="@{/css/AdminLTE.min.css}">
+<link rel="stylesheet" href="../../css/skins/_all-skins.min.css"
+	th:href="@{/css/skins/_all-skins.min.css}">
 
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+<script
+	src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 
-	<script src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/jquery.validate.min.js"></script>
+<script
+	src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/jquery.validate.min.js"></script>
 
 
-	<style>
-		.error {
-			color: red;
-			font-size: 11px;
-		}
-	</style>
+<style>
+.error {
+	color: red;
+	font-size: 11px;
+}
+</style>
 
 </head>
 
@@ -61,41 +70,41 @@
 							<div class="row">
 								<!-- left column -->
 								<div class="col-md-12">
-									<div class="col-md-2">
-									</div>
+									<div class="col-md-2"></div>
 
 
-									<div class="col-md-8 shadow bg-white rounded" style="margin-top: 20px;">
+									<div class="col-md-8 shadow bg-white rounded"
+										style="margin-top: 20px;">
 										<!-- general form elements -->
 										<div class="box box-primary">
 											<div class="box-header with-border">
 												<!--<h3 class="box-title">Category Master</h3>-->
-											</div><!-- /.box-header -->
+											</div>
+											<!-- /.box-header -->
 											<!-- form start -->
-											<form id="storeMasterForm" role="form" th:action="@{/store/}" method="POST"
-												th:object="${store}">
+											<form id="storeMasterForm" role="form" th:action="@{/store/}"
+												method="POST" th:object="${store}">
 												<div class="box-body">
 
 													<div class="form-group col-md-12">
-														<label for="inputEmail4">Store Code</label> <input type="text"
-															class="form-control" placeholder="Store Code"
+														<label for="inputEmail4">Store Code</label> <input
+															type="text" class="form-control" placeholder="Store Code"
 															th:field="*{storeCode}">
 													</div>
-													
+
 													<div class="form-group col-md-12">
 														<label for="inputEmail4">Description</label><span
 															style="color: red">*</span> <input type="text"
 															class="form-control" placeholder="Description" required
 															th:field="*{description}" title="This field is required">
 													</div>
-													
-													
+
+
 													<div class="form-group col-md-12">
 														<label class="form-label">Status</label> <label
-															style="color: red">*</label>
-														<select class="form-control" id="" title="status"
-															th:field="*{storeStatus}" required>
-															
+															style="color: red">*</label> <select class="form-control"
+															id="" title="status" th:field="*{storeStatus}" required>
+
 
 															<option value="functional" selected>Functional</option>
 															<option value="non-functional">Non-Functioanl</option>
@@ -104,37 +113,35 @@
 
 													<div class="form-group col-md-12">
 														<label class="form-label">Type</label> <label
-															style="color: red">*</label>
-														<select class="form-control" id="" title="type"
-															th:field="*{storeType}" required>
-															
+															style="color: red">*</label> <select class="form-control"
+															id="" title="type" th:field="*{storeType}" required>
+
 															<option value="store">Store</option>
 															<option value="godown">Godown</option>
 														</select>
 													</div>
 
 													<div class="form-group col-md-12">
-														<label for="inputEmail4">Location</label> <input type="text"
-															class="form-control" placeholder="Location" title="location"
-															th:field="*{location}">
+														<label for="inputEmail4">Location</label> <input
+															type="text" class="form-control" placeholder="Location"
+															title="location" th:field="*{location}">
 													</div>
-													
+
 
 													<div class="form-check form-check-inline">
 														<input class="form-check-input" type="radio"
 															name="inlineRadioOptions" id="inlineRadio1" value="Y">
-														<label class="form-check-label"
-															for="inlineRadio1">Active</label>
+														<label class="form-check-label" for="inlineRadio1">Active</label>
 													</div>
 
 													<div class="form-check form-check-inline">
 														<input class="form-check-input" type="radio"
 															name="inlineRadioOptions" id="inlineRadio1" value="N">
-														<label class="form-check-label"
-															for="inlineRadio1">In-Active</label>
+														<label class="form-check-label" for="inlineRadio1">In-Active</label>
 													</div>
 
-												</div><!-- /.box-body -->
+												</div>
+												<!-- /.box-body -->
 
 												<div class="box-footer" style="margin: 10px">
 													<input type="submit" value="Submit" class="btn btn-primary" />
@@ -145,16 +152,17 @@
 											</form>
 
 
-										</div><!-- /.box -->
-										<div style="width: parent; text-align-last: right; margin:8px">
+										</div>
+										<!-- /.box -->
+										<div
+											style="width: parent; text-align-last: right; margin: 8px">
 											<a th:href="@{/store/list}">View All Store</a>
 
 										</div>
 									</div>
 
 
-									<div class="col-md-2">
-									</div>
+									<div class="col-md-2"></div>
 								</div>
 
 							</div>
@@ -163,24 +171,28 @@
 					</section>
 				</section>
 			</div>
+		</div>
+	</div>
+	<div th:replace="fragments/footer :: footer">...</div>
 
-			<div th:replace="fragments/footer :: footer">...</div>
-
-			<script>
+	<script>
 
 				$("#storeMasterForm").validate({
 					ignoreTitle: true
 				});
 
 			</script>
-			<!--   <section class="content">
+	<!--   <section class="content">
         
         </section>-->
-			<script src="../../js/jQuery-2.1.4.min.js" th:src="@{/js/jQuery-2.1.4.min.js}"></script>
-			<script src="../../js/bootstrap.min.js" th:src="@{/js/bootstrap.min.js}"></script>
-			<script src="../../js/fastclick.min.js" th:src="@{/js/fastclick.min.js}"></script>
-			<script src="../../js/app.min.js" th:src="@{/js/app.min.js}"></script>
-			<script src="../../js/demo.js" th:src="@{/js/demo.js}"></script>
+	<script src="../../js/jQuery-2.1.4.min.js"
+		th:src="@{/js/jQuery-2.1.4.min.js}"></script>
+	<script src="../../js/bootstrap.min.js"
+		th:src="@{/js/bootstrap.min.js}"></script>
+	<script src="../../js/fastclick.min.js"
+		th:src="@{/js/fastclick.min.js}"></script>
+	<script src="../../js/app.min.js" th:src="@{/js/app.min.js}"></script>
+	<script src="../../js/demo.js" th:src="@{/js/demo.js}"></script>
 </body>
 
 </html>
