--- a/src/main/resources/templates/layouts/Master/UOM.html
+++ b/src/main/resources/templates/layouts/Master/UOM.html
@@ -2,27 +2,36 @@
 <html>
 
 <head xmlns:th="http://www.thymeleaf.org">
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>EBS</title>
-	<meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-	<link rel="stylesheet" href="../../css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-	<link rel="stylesheet" href="../../css/AdminLTE.min.css" th:href="@{/css/AdminLTE.min.css}">
-	<link rel="stylesheet" href="../../css/skins/_all-skins.min.css" th:href="@{/css/skins/_all-skins.min.css}">
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<title>EBS</title>
+<meta
+	content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
+	name="viewport">
+<link rel="stylesheet" href="../../css/bootstrap.min.css"
+	th:href="@{/css/bootstrap.min.css}">
+<link rel="stylesheet"
+	href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+<link rel="stylesheet"
+	href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+<link rel="stylesheet" href="../../css/AdminLTE.min.css"
+	th:href="@{/css/AdminLTE.min.css}">
+<link rel="stylesheet" href="../../css/skins/_all-skins.min.css"
+	th:href="@{/css/skins/_all-skins.min.css}">
 
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+<script
+	src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 
-	<script src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/jquery.validate.min.js"></script>
+<script
+	src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/jquery.validate.min.js"></script>
 
 
-	<style>
-		.error {
-			color: red;
-			font-size: 11px;
-		}
-	</style>
+<style>
+.error {
+	color: red;
+	font-size: 11px;
+}
+</style>
 
 </head>
 
@@ -35,8 +44,7 @@
 				<div class="row">
 					<!-- left column -->
 					<div class="col-md-12">
-						<div class="col-md-3">
-						</div>
+						<div class="col-md-3"></div>
 
 
 						<div class="col-md-6" style="margin-top: 20px;">
@@ -46,25 +54,27 @@
 									<h3 class="box-title">UOM</h3>
 								</div>
 								<!-- form start -->
-								<form id="uomForm" role="form" th:action="@{/uom/}" method="POST" th:object="${uom}">
+								<form id="uomForm" role="form" th:action="@{/uom/}"
+									method="POST" th:object="${uom}">
 									<div class="box-body">
 
 										<div class="form-group col-md-12">
-											<label>UOM Code</label><label style="color: red">*</label>
-											<input type="text" class="form-control" placeholder="Uom Code"
-												th:field="*{uomCode}" title="This field is required" required />
+											<label>UOM Code</label><label style="color: red">*</label> <input
+												type="text" class="form-control" placeholder="Uom Code"
+												th:field="*{uomCode}" title="This field is required"
+												required />
 
 										</div>
 										<div class="form-group col-md-12">
-											<label>Unit</label><label style="color: red">*</label>
-											<input type="text" class="form-control" placeholder="Unit"
+											<label>Unit</label><label style="color: red">*</label> <input
+												type="text" class="form-control" placeholder="Unit"
 												th:field="*{unit}" title="This field is required" required />
 
 										</div>
 
 										<div class="form-group col-lg-12">
-											<label class="form-label">Measurement System</label>
-											<select class="form-control" title="measurement system"
+											<label class="form-label">Measurement System</label> <select
+												class="form-control" title="measurement system"
 												th:field="*{measurementSystem}">
 												<option value="">Select</option>
 												<option value="british">British</option>
@@ -79,44 +89,47 @@
 									</div>
 
 									<div class="box-footer">
-										<input type="submit" value="Submit" class="btn btn-primary" /> <input
-											type="reset" value="Reset" class="btn btn-danger" />
+										<input type="submit" value="Submit" class="btn btn-primary" />
+										<input type="reset" value="Reset" class="btn btn-danger" />
 									</div>
 
 
 								</form>
 
-								<div style="width: parent; text-align-last: right; margin:8px">
+								<div style="width: parent; text-align-last: right; margin: 8px">
 									<a th:href="@{/uom/list}">View All UOM</a>
 								</div>
 							</div>
 						</div>
 
 
-						<div class="col-md-3">
-						</div>
+						<div class="col-md-3"></div>
 					</div>
 
 				</div>
 			</section>
+		</div>
+	</div>
+	<div th:replace="fragments/footer :: footer">...</div>
 
-			<div th:replace="fragments/footer :: footer">...</div>
-
-			<script>
+	<script>
 
 				$("#uomForm").validate({
 					ignoreTitle: true
 				});
 
 			</script>
-			<!--   <section class="content">
+	<!--   <section class="content">
         
         </section>-->
-			<script src="../../js/jQuery-2.1.4.min.js" th:src="@{/js/jQuery-2.1.4.min.js}"></script>
-			<script src="../../js/bootstrap.min.js" th:src="@{/js/bootstrap.min.js}"></script>
-			<script src="../../js/fastclick.min.js" th:src="@{/js/fastclick.min.js}"></script>
-			<script src="../../js/app.min.js" th:src="@{/js/app.min.js}"></script>
-			<script src="../../js/demo.js" th:src="@{/js/demo.js}"></script>
+	<script src="../../js/jQuery-2.1.4.min.js"
+		th:src="@{/js/jQuery-2.1.4.min.js}"></script>
+	<script src="../../js/bootstrap.min.js"
+		th:src="@{/js/bootstrap.min.js}"></script>
+	<script src="../../js/fastclick.min.js"
+		th:src="@{/js/fastclick.min.js}"></script>
+	<script src="../../js/app.min.js" th:src="@{/js/app.min.js}"></script>
+	<script src="../../js/demo.js" th:src="@{/js/demo.js}"></script>
 </body>
 
 </html>
