--- a/src/main/resources/templates/layouts/Master/categoryMaster.html
+++ b/src/main/resources/templates/layouts/Master/categoryMaster.html
@@ -2,33 +2,45 @@
 <html>
 
 <head xmlns:th="http://www.thymeleaf.org">
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>EBS</title>
-	<meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-	<link rel="stylesheet" href="../../css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-	<link rel="stylesheet" href="../../css/AdminLTE.min.css" th:href="@{/css/AdminLTE.min.css}">
-	<link rel="stylesheet" href="../../css/skins/_all-skins.min.css" th:href="@{/css/skins/_all-skins.min.css}">
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<title>EBS</title>
+<meta
+	content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
+	name="viewport">
+<link rel="stylesheet" href="../../css/bootstrap.min.css"
+	th:href="@{/css/bootstrap.min.css}">
+<link rel="stylesheet"
+	href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+<link rel="stylesheet"
+	href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+<link rel="stylesheet" href="../../css/AdminLTE.min.css"
+	th:href="@{/css/AdminLTE.min.css}">
+<link rel="stylesheet" href="../../css/skins/_all-skins.min.css"
+	th:href="@{/css/skins/_all-skins.min.css}">
 
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+<script
+	src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 
-	<link href="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.2.0/sweetalert2.min.css"
-		rel="stylesheet" />
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.2.0/sweetalert2.min.js"></script>
+<link
+	href="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.2.0/sweetalert2.min.css"
+	rel="stylesheet" />
+<script
+	src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.2.0/sweetalert2.min.js"></script>
 
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+<script
+	src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 
-	<script src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/jquery.validate.min.js"></script>
+<script
+	src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/jquery.validate.min.js"></script>
 
 
-	<style>
-		.error {
-			color: red;
-			font-size: 11px;
-		}
-	</style>
+<style>
+.error {
+	color: red;
+	font-size: 11px;
+}
+</style>
 
 </head>
 
@@ -67,39 +79,43 @@
 							<div class="row">
 								<!-- left column -->
 								<div class="col-md-12">
-									<div class="col-md-2">
-									</div>
+									<div class="col-md-2"></div>
 
 
-									<div class="col-md-8 shadow bg-white rounded" style="margin-top: 20px;">
+									<div class="col-md-8 shadow bg-white rounded"
+										style="margin-top: 20px;">
 										<!-- general form elements -->
 										<div class="box box-primary">
-											<input type="hidden" id="mess" name="mess" th:value="${message}">
+											<input type="hidden" id="mess" name="mess"
+												th:value="${message}">
 											<div class="box-header with-border">
 												<!--<h3 class="box-title">Category Master</h3>-->
-											</div><!-- /.box-header -->
+											</div>
+											<!-- /.box-header -->
 											<!-- form start -->
-											<form id="categoryForm" role="form" th:action="@{/category/}" method="POST"
-												th:object="${category}">
+											<form id="categoryForm" role="form" th:action="@{/category/}"
+												method="POST" th:object="${category}">
 												<div class="box-body">
 
 													<div class="form-group col-md-6">
 														<label for="inputEmail4">Category Code</label> <input
-															type="text" class="form-control" placeholder="Category Code"
-															th:field="*{categCode}" title="category code" readonly>
+															type="text" class="form-control"
+															placeholder="Category Code" th:field="*{categCode}"
+															title="category code" readonly>
 													</div>
 													<div class="form-group col-md-6">
 														<label for="inputEmail4">Description</label><span
 															style="color: red">*</span> <input type="text"
 															class="form-control" placeholder="Description"
-															th:field="*{description}" title="This field is required" required>
+															th:field="*{description}" title="This field is required"
+															required>
 													</div>
 
 													<div class="form-group col-md-6">
 														<label class="form-label">Acount Head</label> <label
 															style="color: red">*</label> <select class="form-control"
-															id="" th:field="*{accountHead}" placeholder="Account Head"
-															title="account head" required>
+															id="" th:field="*{accountHead}"
+															placeholder="Account Head" title="account head" required>
 															<option value="">Select</option>
 															<option value="t-1">type-1</option>
 															<option value="t-2">type-2</option>
@@ -116,24 +132,26 @@
 													</div>
 
 													<div class="form-group col-md-6">
-														<label for="inputEmail4">Parent Code</label> <input type="text"
-															class="form-control" placeholder="Parent Code"
-															th:field="*{parentCode}" title="parent code">
+														<label for="inputEmail4">Parent Code</label> <input
+															type="text" class="form-control"
+															placeholder="Parent Code" th:field="*{parentCode}"
+															title="parent code">
 													</div>
 
 													<div class="form-group col-md-6">
-														<label for="inputEmail4">Parent Name</label> <input type="text"
-															class="form-control" placeholder="Parent Name"
-															th:field="*{parentName}" title="parent name">
+														<label for="inputEmail4">Parent Name</label> <input
+															type="text" class="form-control"
+															placeholder="Parent Name" th:field="*{parentName}"
+															title="parent name">
 													</div>
 
-													<label class="checkbox-inline">
-														<input type="radio" value="Y" name="inlineRadioOptions">Active
-														<input type="radio" value="N"
-															name="inlineRadioOptions">In-Active
+													<label class="checkbox-inline"> <input type="radio"
+														value="Y" name="inlineRadioOptions">Active <input
+														type="radio" value="N" name="inlineRadioOptions">In-Active
 													</label>
 
-												</div><!-- /.box-body -->
+												</div>
+												<!-- /.box-body -->
 
 												<div class="box-footer" style="margin: 10px">
 													<input type="submit" value="Submit" class="btn btn-primary" />
@@ -144,15 +162,16 @@
 											</form>
 
 
-										</div><!-- /.box -->
-										<div style="width: parent; text-align-last: right; margin:8px">
+										</div>
+										<!-- /.box -->
+										<div
+											style="width: parent; text-align-last: right; margin: 8px">
 											<a th:href="@{/category/list}">view category</a>
 										</div>
 									</div>
 
 
-									<div class="col-md-2">
-									</div>
+									<div class="col-md-2"></div>
 								</div>
 
 							</div>
@@ -161,10 +180,12 @@
 					</section>
 				</section>
 			</div>
+		</div>
+	</div>
 
-			<div th:replace="fragments/footer :: footer">...</div>
+	<div th:replace="fragments/footer :: footer">...</div>
 
-			<script>
+	<script>
 
 				$(document).ready(function () {
 					var message = document.getElementById('mess').value
@@ -183,7 +204,7 @@
 				});
 			</script>
 
-			<script>
+	<script>
 
 				$("#categoryForm").validate({
 					ignoreTitle: true
@@ -191,14 +212,17 @@
 
 			</script>
 
-			<!--   <section class="content">
+	<!--   <section class="content">
         
         </section>-->
-			<script src="../../js/jQuery-2.1.4.min.js" th:src="@{/js/jQuery-2.1.4.min.js}"></script>
-			<script src="../../js/bootstrap.min.js" th:src="@{/js/bootstrap.min.js}"></script>
-			<script src="../../js/fastclick.min.js" th:src="@{/js/fastclick.min.js}"></script>
-			<script src="../../js/app.min.js" th:src="@{/js/app.min.js}"></script>
-			<script src="../../js/demo.js" th:src="@{/js/demo.js}"></script>
+	<script src="../../js/jQuery-2.1.4.min.js"
+		th:src="@{/js/jQuery-2.1.4.min.js}"></script>
+	<script src="../../js/bootstrap.min.js"
+		th:src="@{/js/bootstrap.min.js}"></script>
+	<script src="../../js/fastclick.min.js"
+		th:src="@{/js/fastclick.min.js}"></script>
+	<script src="../../js/app.min.js" th:src="@{/js/app.min.js}"></script>
+	<script src="../../js/demo.js" th:src="@{/js/demo.js}"></script>
 </body>
 
 </html>
