--- a/src/main/resources/templates/layouts/Master/designation.html
+++ b/src/main/resources/templates/layouts/Master/designation.html
@@ -2,36 +2,48 @@
 <html>
 
 <head xmlns:th="http://www.thymeleaf.org">
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>EBS</title>
-	<meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-	<link rel="stylesheet" href="../../css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-	<link rel="stylesheet" href="../../css/AdminLTE.min.css" th:href="@{/css/AdminLTE.min.css}">
-	<link rel="stylesheet" href="../../css/skins/_all-skins.min.css" th:href="@{/css/skins/_all-skins.min.css}">
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<title>EBS</title>
+<meta
+	content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
+	name="viewport">
+<link rel="stylesheet" href="../../css/bootstrap.min.css"
+	th:href="@{/css/bootstrap.min.css}">
+<link rel="stylesheet"
+	href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+<link rel="stylesheet"
+	href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+<link rel="stylesheet" href="../../css/AdminLTE.min.css"
+	th:href="@{/css/AdminLTE.min.css}">
+<link rel="stylesheet" href="../../css/skins/_all-skins.min.css"
+	th:href="@{/css/skins/_all-skins.min.css}">
 
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+<script
+	src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 
-	<link href="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.2.0/sweetalert2.min.css"
-		rel="stylesheet" />
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.2.0/sweetalert2.min.js"></script>
-
-
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-
-	<script src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/jquery.validate.min.js"></script>
+<link
+	href="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.2.0/sweetalert2.min.css"
+	rel="stylesheet" />
+<script
+	src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.2.0/sweetalert2.min.js"></script>
 
 
-	<style>
-		.error {
-			color: red;
-			font-size: 11px;
-		}
-	</style>
-	
-	
+<script
+	src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+
+<script
+	src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/jquery.validate.min.js"></script>
+
+
+<style>
+.error {
+	color: red;
+	font-size: 11px;
+}
+</style>
+
+
 
 </head>
 
@@ -70,20 +82,23 @@
 							<div class="row">
 								<!-- left column -->
 								<div class="col-md-12">
-									<div class="col-md-2">
-									</div>
+									<div class="col-md-2"></div>
 
 
-									<div class="col-md-8 shadow bg-white rounded" style="margin-top: 20px;">
+									<div class="col-md-8 shadow bg-white rounded"
+										style="margin-top: 20px;">
 										<!-- general form elements -->
 										<div class="box box-primary">
 
-											<input type="hidden" id="mess" name="mess" th:value="${message}">
+											<input type="hidden" id="mess" name="mess"
+												th:value="${message}">
 											<div class="box-header with-border">
 												<!--<h3 class="box-title">Category Master</h3>-->
-											</div><!-- /.box-header -->
+											</div>
+											<!-- /.box-header -->
 											<!-- form start -->
-											<form id="designationForm" role="form" th:action="@{/designation/}" method="POST"
+											<form id="designationForm" role="form"
+												th:action="@{/designation/}" method="POST"
 												th:object="${designation}">
 												<div class="box-body">
 
@@ -94,9 +109,10 @@
 													</div>
 													<div class="form-group col-md-6">
 														<label for="inputPassword4">Designation Name</label><span
-															style="color: red">*</span> <input
-															type="text" class="form-control" title="This field is required"
-															placeholder="Designation Name" th:field="*{desigName}" required>
+															style="color: red">*</span> <input type="text"
+															class="form-control" title="This field is required"
+															placeholder="Designation Name" th:field="*{desigName}"
+															required>
 													</div>
 
 													<div class="form-group col-md-12">
@@ -123,18 +139,19 @@
 													</div>
 
 													<div class="form-group col-md-6">
-														<label for="inputEmail4">Increment1</label> <input type="number"
-															class="form-control" placeholder="Increement 1"
-															th:field="*{increment1}">
+														<label for="inputEmail4">Increment1</label> <input
+															type="number" class="form-control"
+															placeholder="Increement 1" th:field="*{increment1}">
 													</div>
 
 													<div class="form-group col-md-6">
-														<label for="inputEmail4">Increment2</label> <input type="number"
-															class="form-control" placeholder="Increement 2"
-															th:field="*{increment2}">
+														<label for="inputEmail4">Increment2</label> <input
+															type="number" class="form-control"
+															placeholder="Increement 2" th:field="*{increment2}">
 													</div>
 
-												</div><!-- /.box-body -->
+												</div>
+												<!-- /.box-body -->
 
 												<div class="box-footer" style="margin: 10px">
 													<input type="submit" value="Submit" class="btn btn-primary" />
@@ -145,15 +162,16 @@
 											</form>
 
 
-										</div><!-- /.box -->
-										<div style="width: parent; text-align-last: right; margin:8px">
+										</div>
+										<!-- /.box -->
+										<div
+											style="width: parent; text-align-last: right; margin: 8px">
 											<a th:href="@{/designation/list}">View All Designation</a>
 										</div>
 									</div>
 
 
-									<div class="col-md-2">
-									</div>
+									<div class="col-md-2"></div>
 								</div>
 
 							</div>
@@ -163,9 +181,12 @@
 				</section>
 			</div>
 
-			<div th:replace="fragments/footer :: footer">...</div>
+		</div>
+	</div>
 
-			<script>
+	<div th:replace="fragments/footer :: footer">...</div>
+
+	<script>
 
 				$(document).ready(function () {
 					var message = document.getElementById('mess').value
@@ -184,21 +205,24 @@
 				});
 			</script>
 
-			<script>
+	<script>
 
 				$("#designationForm").validate({
 					ignoreTitle: true
 				});
 
 			</script>
-			<!--   <section class="content">
+	<!--   <section class="content">
         
         </section>-->
-			<script src="../../js/jQuery-2.1.4.min.js" th:src="@{/js/jQuery-2.1.4.min.js}"></script>
-			<script src="../../js/bootstrap.min.js" th:src="@{/js/bootstrap.min.js}"></script>
-			<script src="../../js/fastclick.min.js" th:src="@{/js/fastclick.min.js}"></script>
-			<script src="../../js/app.min.js" th:src="@{/js/app.min.js}"></script>
-			<script src="../../js/demo.js" th:src="@{/js/demo.js}"></script>
+	<script src="../../js/jQuery-2.1.4.min.js"
+		th:src="@{/js/jQuery-2.1.4.min.js}"></script>
+	<script src="../../js/bootstrap.min.js"
+		th:src="@{/js/bootstrap.min.js}"></script>
+	<script src="../../js/fastclick.min.js"
+		th:src="@{/js/fastclick.min.js}"></script>
+	<script src="../../js/app.min.js" th:src="@{/js/app.min.js}"></script>
+	<script src="../../js/demo.js" th:src="@{/js/demo.js}"></script>
 </body>
 
 </html>
