--- a/src/main/resources/templates/layouts/Master/state.html
+++ b/src/main/resources/templates/layouts/Master/state.html
@@ -2,34 +2,46 @@
 <html>
 
 <head xmlns:th="http://www.thymeleaf.org">
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>EBS</title>
-	<meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-	<link rel="stylesheet" href="../../css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-	<link rel="stylesheet" href="../../css/AdminLTE.min.css" th:href="@{/css/AdminLTE.min.css}">
-	<link rel="stylesheet" href="../../css/skins/_all-skins.min.css" th:href="@{/css/skins/_all-skins.min.css}">
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<title>EBS</title>
+<meta
+	content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
+	name="viewport">
+<link rel="stylesheet" href="../../css/bootstrap.min.css"
+	th:href="@{/css/bootstrap.min.css}">
+<link rel="stylesheet"
+	href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+<link rel="stylesheet"
+	href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+<link rel="stylesheet" href="../../css/AdminLTE.min.css"
+	th:href="@{/css/AdminLTE.min.css}">
+<link rel="stylesheet" href="../../css/skins/_all-skins.min.css"
+	th:href="@{/css/skins/_all-skins.min.css}">
 
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+<script
+	src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 
-	<link href="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.2.0/sweetalert2.min.css"
-		rel="stylesheet" />
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.2.0/sweetalert2.min.js"></script>
-
-
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-
-	<script src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/jquery.validate.min.js"></script>
+<link
+	href="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.2.0/sweetalert2.min.css"
+	rel="stylesheet" />
+<script
+	src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.2.0/sweetalert2.min.js"></script>
 
 
-	<style>
-		.error {
-			color: red;
-			font-size: 11px;
-		}
-	</style>
+<script
+	src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+
+<script
+	src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/jquery.validate.min.js"></script>
+
+
+<style>
+.error {
+	color: red;
+	font-size: 11px;
+}
+</style>
 
 
 </head>
@@ -43,8 +55,7 @@
 				<div class="row">
 					<!-- left column -->
 					<div class="col-md-12">
-						<div class="col-md-3">
-						</div>
+						<div class="col-md-3"></div>
 
 
 						<div class="col-md-6" style="margin-top: 20px;">
@@ -57,44 +68,49 @@
 									<h3 class="box-title">State Master</h3>
 								</div>
 								<!-- form start -->
-								<form id="stateForm" role="form" th:action="@{/state/}" method="POST"
-									th:object="${state}">
+								<form id="stateForm" role="form" th:action="@{/state/}"
+									method="POST" th:object="${state}">
 									<div class="box-body">
 
 
 										<div class="form-group col-md-6">
-											<label for="inputEmail4">State Code</label> <input type="text"
-												class="form-control" placeholder="state code" th:field="*{stateCode}">
+											<label for="inputEmail4">State Code</label> <input
+												type="text" class="form-control" placeholder="state code"
+												th:field="*{stateCode}">
 										</div>
 										<div class="form-group col-md-6">
 											<label for="inputPassword4">State Name</label><span
-												style="color: red">*</span> <input type="text" class="form-control"
-												placeholder="State Name" th:field="*{stateName}" title="This field is required" required>
+												style="color: red">*</span> <input type="text"
+												class="form-control" placeholder="State Name"
+												th:field="*{stateName}" title="This field is required"
+												required>
 										</div>
 
 
 
 										<div class="form-group col-md-12">
-											<label for="inputEmail4">Gst State Code</label> <input type="text"
-												class="form-control" placeholder="State Gst Code" title="state gst code"
+											<label for="inputEmail4">Gst State Code</label> <input
+												type="text" class="form-control"
+												placeholder="State Gst Code" title="state gst code"
 												th:field="*{gstStateCode}">
 										</div>
 
 										<div class="form-group col-md-12">
 											<label class="form-label">Country Name</label> <label
 												style="color: red">*</label> <select class="form-control"
-												title="This field is required" required th:field="*{country}">
+												title="This field is required" required
+												th:field="*{country}">
 												<option value="">Select Country</option>
 												<option th:each="country :  ${countryList}"
-													th:text="${country.countryName}" th:value=" ${country.countryCode}">
-												</option>
+													th:text="${country.countryName}"
+													th:value=" ${country.countryCode}"></option>
 											</select>
 										</div>
 
 
-										<label class="checkbox-inline">
-											<input type="radio" value="Y" name="inlineRadioOptions">Active
-											<input type="radio" value="N" name="inlineRadioOptions">In-Active
+										<label class="checkbox-inline"> <input type="radio"
+											value="Y" name="inlineRadioOptions">Active <input
+											type="radio" value="N" name="inlineRadioOptions">In-Active
 										</label>
 
 									</div>
@@ -111,16 +127,17 @@
 						</div>
 
 
-						<div class="col-md-3">
-						</div>
+						<div class="col-md-3"></div>
 					</div>
 
 				</div>
 			</section>
 
-			<div th:replace="fragments/footer :: footer">...</div>
+		</div>
+	</div>
+	<div th:replace="fragments/footer :: footer">...</div>
 
-			<script>
+	<script>
 
 				$(document).ready(function () {
 					var message = document.getElementById('mess').value
@@ -140,7 +157,7 @@
 			</script>
 
 
-			<script>
+	<script>
 
 				$("#stateForm").validate({
 					ignoreTitle: true
@@ -148,14 +165,17 @@
 
 			</script>
 
-			<!--   <section class="content">
+	<!--   <section class="content">
         
         </section>-->
-			<script src="../../js/jQuery-2.1.4.min.js" th:src="@{/js/jQuery-2.1.4.min.js}"></script>
-			<script src="../../js/bootstrap.min.js" th:src="@{/js/bootstrap.min.js}"></script>
-			<script src="../../js/fastclick.min.js" th:src="@{/js/fastclick.min.js}"></script>
-			<script src="../../js/app.min.js" th:src="@{/js/app.min.js}"></script>
-			<script src="../../js/demo.js" th:src="@{/js/demo.js}"></script>
+	<script src="../../js/jQuery-2.1.4.min.js"
+		th:src="@{/js/jQuery-2.1.4.min.js}"></script>
+	<script src="../../js/bootstrap.min.js"
+		th:src="@{/js/bootstrap.min.js}"></script>
+	<script src="../../js/fastclick.min.js"
+		th:src="@{/js/fastclick.min.js}"></script>
+	<script src="../../js/app.min.js" th:src="@{/js/app.min.js}"></script>
+	<script src="../../js/demo.js" th:src="@{/js/demo.js}"></script>
 </body>
 
 </html>
