--- a/src/main/resources/templates/layouts/Master/userMaster.html
+++ b/src/main/resources/templates/layouts/Master/userMaster.html
@@ -2,26 +2,35 @@
 <html>
 
 <head xmlns:th="http://www.thymeleaf.org">
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>EBS</title>
-	<meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-	<link rel="stylesheet" href="../../css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-	<link rel="stylesheet" href="../../css/AdminLTE.min.css" th:href="@{/css/AdminLTE.min.css}">
-	<link rel="stylesheet" href="../../css/skins/_all-skins.min.css" th:href="@{/css/skins/_all-skins.min.css}">
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<title>EBS</title>
+<meta
+	content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
+	name="viewport">
+<link rel="stylesheet" href="../../css/bootstrap.min.css"
+	th:href="@{/css/bootstrap.min.css}">
+<link rel="stylesheet"
+	href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+<link rel="stylesheet"
+	href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+<link rel="stylesheet" href="../../css/AdminLTE.min.css"
+	th:href="@{/css/AdminLTE.min.css}">
+<link rel="stylesheet" href="../../css/skins/_all-skins.min.css"
+	th:href="@{/css/skins/_all-skins.min.css}">
 
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+<script
+	src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 
-	<script src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/jquery.validate.min.js"></script>
+<script
+	src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/jquery.validate.min.js"></script>
 
-	<style>
-		.error {
-			color: red;
-			font-size: 11px;
-		}
-	</style>
+<style>
+.error {
+	color: red;
+	font-size: 11px;
+}
+</style>
 </head>
 
 <body class="hold-transition skin-blue sidebar-mini">
@@ -59,19 +68,20 @@
 							<div class="row">
 								<!-- left column -->
 								<div class="col-md-12">
-									<div class="col-md-2">
-									</div>
+									<div class="col-md-2"></div>
 
 
-									<div class="col-md-8 shadow bg-white rounded" style="margin-top: 20px;">
+									<div class="col-md-8 shadow bg-white rounded"
+										style="margin-top: 20px;">
 										<!-- general form elements -->
 										<div class="box box-primary">
 											<div class="box-header with-border">
 												<!--<h3 class="box-title">Category Master</h3>-->
-											</div><!-- /.box-header -->
+											</div>
+											<!-- /.box-header -->
 											<!-- form start -->
-											<form id="userMasterForm" role="form" th:action="@{/user/}" method="POST"
-												th:object="${user}">
+											<form id="userMasterForm" role="form" th:action="@{/user/}"
+												method="POST" th:object="${user}">
 												<div class="box-body">
 
 													<div class="form-group col-md-12">
@@ -81,13 +91,12 @@
 															<option value="">Select</option>
 															<option th:each="employee :  ${listEmployee}"
 																th:text="${employee.empName}"
-																th:value=" ${employee.empCode}">
-															</option>
+																th:value=" ${employee.empCode}"></option>
 														</select>
 													</div>
 													<div class="form-group col-md-12">
-														<label>User Code</label><span style="color: red">*</span> <input
-															type="text" id="userCode" name="userCode"
+														<label>User Code</label><span style="color: red">*</span>
+														<input type="text" id="userCode" name="userCode"
 															class="form-control" placeholder="User Code"
 															title="This field is required" th:field="*{userCode}"
 															required>
@@ -105,8 +114,9 @@
 													<div class="form-group col-md-12">
 														<label>User Password</label><span style="color: red">*</span>
 														<input type="password" class="form-control"
-															placeholder="User Password" title="This field is required"
-															th:field="*{userPassword}" required>
+															placeholder="User Password"
+															title="This field is required" th:field="*{userPassword}"
+															required>
 													</div>
 
 
@@ -116,20 +126,19 @@
 														<div class="form-check form-check-inline">
 															<input class="form-check-input" type="radio"
 																name="inlineRadioOptions" id="inlineRadio1" value="Y">
-															<label class="form-check-label"
-																for="inlineRadio1">Active</label>
+															<label class="form-check-label" for="inlineRadio1">Active</label>
 														</div>
 
 														<div class="form-check form-check-inline">
 															<input class="form-check-input" type="radio"
 																name="inlineRadioOptions" id="inlineRadio1" value="N">
-															<label class="form-check-label"
-																for="inlineRadio1">In-Active</label>
+															<label class="form-check-label" for="inlineRadio1">In-Active</label>
 														</div>
 
 													</div>
 
-												</div><!-- /.box-body -->
+												</div>
+												<!-- /.box-body -->
 
 												<div class="box-footer" style="margin: 10px">
 													<input type="submit" value="Submit" class="btn btn-primary" />
@@ -140,15 +149,16 @@
 											</form>
 
 
-										</div><!-- /.box -->
-										<div style="width: parent; text-align-last: right; margin:8px">
+										</div>
+										<!-- /.box -->
+										<div
+											style="width: parent; text-align-last: right; margin: 8px">
 											<a th:href="@{/user/list}">View All User</a>
 										</div>
 									</div>
 
 
-									<div class="col-md-2">
-									</div>
+									<div class="col-md-2"></div>
 								</div>
 
 							</div>
@@ -157,25 +167,28 @@
 					</section>
 				</section>
 			</div>
+		</div>
+	</div>
+	<div th:replace="fragments/footer :: footer">...</div>
 
-			<div th:replace="fragments/footer :: footer">...</div>
 
-
-			<script>
+	<script>
 
 				$("#userMasterForm").validate({
 					ignoreTitle: true
 				});
 
 			</script>
-			<!--   <section class="content">
+	<!--   <section class="content">
         
         </section>-->
-			<!--<script src="../../js/jQuery-2.1.4.min.js" th:src="@{/js/jQuery-2.1.4.min.js}"></script>-->
-			<script src="../../js/bootstrap.min.js" th:src="@{/js/bootstrap.min.js}"></script>
-			<script src="../../js/fastclick.min.js" th:src="@{/js/fastclick.min.js}"></script>
-			<script src="../../js/app.min.js" th:src="@{/js/app.min.js}"></script>
-			<script src="../../js/demo.js" th:src="@{/js/demo.js}"></script>
+	<!--<script src="../../js/jQuery-2.1.4.min.js" th:src="@{/js/jQuery-2.1.4.min.js}"></script>-->
+	<script src="../../js/bootstrap.min.js"
+		th:src="@{/js/bootstrap.min.js}"></script>
+	<script src="../../js/fastclick.min.js"
+		th:src="@{/js/fastclick.min.js}"></script>
+	<script src="../../js/app.min.js" th:src="@{/js/app.min.js}"></script>
+	<script src="../../js/demo.js" th:src="@{/js/demo.js}"></script>
 </body>
 
 </html>
